--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -20,4 +20,7 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/world/simplified/Level_0/
+    - assets/world-simplified/simplified/Level_0/
+    - assets/world/
+    - assets/world.ldtk
+    - assets/grass_tiles.png
