--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: flame_ldtk
-description: A Flutter package for integrating LDtk levels into Flame Engine games
+description: LDtk support for flame-engine. Integrate LDtk levels into Flame Engine games.
 version: 0.2.0
 homepage: https://github.com/thomascarvalho/flame_ldtk
 repository: https://github.com/thomascarvalho/flame_ldtk
@@ -18,5 +18,5 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  test: ^1.24.0
-  flutter_lints: ^4.0.0
+  test: ^1.26.0
+  flutter_lints: ^6.0.0
