--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -15,12 +15,15 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flame_test: ^2.0.3
   flutter_lints: ^6.0.0
 
 flutter:
   uses-material-design: true
   assets:
     - assets/world-simplified/simplified/Level_0/
+    - assets/world-simplified/
     - assets/world/
     - assets/world.ldtk
     - assets/grass_tiles.png
+    - assets/colored_forest.png
