--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,5 +18,6 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flame_test: ^2.0.3
   test: ^1.26.0
   flutter_lints: ^6.0.0
