feat!: add LdtkWorld for simplified level management and entity tile support
- Add LdtkWorld class to manage project configuration and paths
  - Add automatic entity sprite loading from LDtk tiles
  - Add dynamic level switching without recreating components

BREAKING CHANGE: LdtkLevelComponent constructor now requires a LdtkWorld
parameter. LdtkLevelComponent.loadLevel() now takes a level identifier
instead of a full path.

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -23,4 +23,6 @@ flutter:
   assets:
     - assets/world-simplified/simplified/Level_0/
     - assets/world-simplified/
+    - assets/world-simplified.ldtk
+    - assets/tilemap_packed.png
     - assets/colored_forest.png
